--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,9 @@
 html {
   font-family: Lora, serif;
   font-size: 16px;
+  @include for-phone-only {
+    font-size: 15px;
+  }
 }
 body {
   font-family: Lora, sans-serif;
@@ -15,7 +18,7 @@ body {
 a,
 ul,
 li {
-  color: $black;
+  color: inherit;
   text-decoration: none;
   list-style-type: none;
   padding: 0;
@@ -204,27 +207,40 @@ footer {
     align-items: center;
     p {
       margin-right: 30px;
+      color: $grey;
     }
     ul {
       display: flex;
       li {
         padding: 0 10px;
         transition: all 0.3s ease-in-out;
+        border-radius: 5px;
+        background-color: #ececec;
+        margin: 0 5px;
         &:hover {
-          background-color: #e8e8e8;
-          border-radius: 5px;
+          background-color: #e0e0e0;
         }
         a.active {
           font-weight: 800;
-          border-bottom: 1px solid;
         }
       }
     }
     @include for-phone-only {
-      flex-direction: column;
+      flex-direction: column-reverse;
+      padding: 20px 0;
+      padding: 20px 0 0;
+      border-bottom: 1px solid #cecece;
       p {
+        font-size: 0.9rem;
         margin-right: 0;
       }
+    }
+  }
+  pre {
+    color: $grey;
+    font-size: 0.8rem;
+    a {
+      text-decoration: underline;
     }
   }
 }
